; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/extr_pci.c_resource_alignment_store.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/extr_pci.c_resource_alignment_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bus_type = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i64 0, align 8
@resource_alignment_lock = common dso_local global i32 0, align 4
@resource_alignment_param = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.bus_type*, i8*, i64)* @resource_alignment_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @resource_alignment_store(%struct.bus_type* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.bus_type*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store %struct.bus_type* %0, %struct.bus_type** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load i64, i64* %7, align 8
  %11 = load i32, i32* @GFP_KERNEL, align 4
  %12 = call i8* @kstrndup(i8* %9, i64 %10, i32 %11)
  store i8* %12, i8** %8, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %18, label %15

15:                                               ; preds = %3
  %16 = load i64, i64* @ENOMEM, align 8
  %17 = sub i64 0, %16
  store i64 %17, i64* %4, align 8
  br label %25

18:                                               ; preds = %3
  %19 = call i32 @spin_lock(i32* @resource_alignment_lock)
  %20 = load i8*, i8** @resource_alignment_param, align 8
  %21 = call i32 @kfree(i8* %20)
  %22 = load i8*, i8** %8, align 8
  store i8* %22, i8** @resource_alignment_param, align 8
  %23 = call i32 @spin_unlock(i32* @resource_alignment_lock)
  %24 = load i64, i64* %7, align 8
  store i64 %24, i64* %4, align 8
  br label %25

25:                                               ; preds = %18, %15
  %26 = load i64, i64* %4, align 8
  ret i64 %26
}

declare dso_local i8* @kstrndup(i8*, i64, i32) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @kfree(i8*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
